# storage/api-docs/api-docs.json
@@ -295,6 +295,9 @@
                     "200": {
                         "description": "Success"
                     },
+                    "422": {
+                        "description": "Validation Error"
+                    },
                     "404": {
                         "description": "Not Found"
                     },
@@ -780,9 +783,9 @@
         "/company-services": {
             "get": {
                 "tags": [
-                    "Company Service"
+                    "Company Services"
                 ],
-                "summary": "Fetch all company services",
+                "summary": "Get all company services",
                 "operationId": "0762eab673099bb6cdfedff5e823e6f1",
                 "responses": {
                     "200": {
@@ -795,14 +798,14 @@
             },
             "post": {
                 "tags": [
-                    "Company Service"
+                    "Company Services"
                 ],
-                "summary": "Store a new company service",
+                "summary": "Create a company service",
                 "operationId": "78ab3e544b1344a22cc1a0d85e2f773d",
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "required": [
                                     "companyServiceName",
@@ -810,19 +813,11 @@
                                 ],
                                 "properties": {
                                     "companyServiceName": {
-                                        "description": "Name of the company service",
                                         "type": "string"
                                     },
                                     "companyServiceImageUrl": {
-                                        "description": "Image URL of the company service",
-                                        "type": "string"
-                                    },
-                                    "serviceItemIds": {
-                                        "description": "Array of service item IDs",
-                                        "type": "array",
-                                        "items": {
-                                            "type": "integer"
-                                        }
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -832,7 +827,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Company service created successfully"
+                        "description": "Created"
                     },
                     "422": {
                         "description": "Validation Error"
@@ -846,9 +841,9 @@
         "/company-services/{id}": {
             "get": {
                 "tags": [
-                    "Company Service"
+                    "Company Services"
                 ],
-                "summary": "Show a single company service",
+                "summary": "Get company service by ID",
                 "operationId": "1ca265e74461c7bd461443ca805323d1",
                 "parameters": [
                     {
@@ -865,16 +860,13 @@
                         "description": "Success"
                     },
                     "404": {
-                        "description": "Company service not found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
+                        "description": "Not Found"
                     }
                 }
             },
             "post": {
                 "tags": [
-                    "Company Service"
+                    "Company Services"
                 ],
                 "summary": "Update a company service",
                 "operationId": "aba6d10eaf6d90e3752546ae15d1c7fe",
@@ -889,24 +881,17 @@
                     }
                 ],
                 "requestBody": {
+                    "required": false,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "properties": {
                                     "companyServiceName": {
-                                        "description": "Name of the company service",
                                         "type": "string"
                                     },
                                     "companyServiceImageUrl": {
-                                        "description": "Image URL of the company service",
-                                        "type": "string"
-                                    },
-                                    "serviceItemIds": {
-                                        "description": "Array of service item IDs",
-                                        "type": "array",
-                                        "items": {
-                                            "type": "integer"
-                                        }
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -916,13 +901,10 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Company service updated successfully"
-                    },
-                    "422": {
-                        "description": "Validation Error"
+                        "description": "Success"
                     },
                     "404": {
-                        "description": "Company service not found"
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -931,7 +913,7 @@
             },
             "delete": {
                 "tags": [
-                    "Company Service"
+                    "Company Services"
                 ],
                 "summary": "Delete a company service",
                 "operationId": "38cefece89b9fa3506b42e35967f4358",
@@ -947,10 +929,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Company service deleted successfully"
+                        "description": "Deleted"
                     },
                     "404": {
-                        "description": "Company service not found"
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -1518,7 +1500,7 @@
                                                         "type": "string"
                                                     },
                                                     "number": {
-                                                        "type": "integer"
+                                                        "type": "string"
                                                     }
                                                 },
                                                 "type": "object"
@@ -1557,7 +1539,7 @@
                                     },
                                     "number": {
                                         "description": "Number associated with the statistic",
-                                        "type": "integer"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -1585,7 +1567,7 @@
                                                     "type": "string"
                                                 },
                                                 "number": {
-                                                    "type": "integer"
+                                                    "type": "string"
                                                 }
                                             },
                                             "type": "object"
@@ -1642,7 +1624,7 @@
                                                     "type": "string"
                                                 },
                                                 "number": {
-                                                    "type": "integer"
+                                                    "type": "string"
                                                 }
                                             },
                                             "type": "object"
@@ -1688,7 +1670,7 @@
                                     },
                                     "number": {
                                         "description": "Number associated with the statistic",
-                                        "type": "integer"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -1716,7 +1698,7 @@
                                                     "type": "string"
                                                 },
                                                 "number": {
-                                                    "type": "integer"
+                                                    "type": "string"
                                                 }
                                             },
                                             "type": "object"
@@ -1803,8 +1785,8 @@
             "description": "Company News"
         },
         {
-            "name": "Company Service",
-            "description": "Company Service"
+            "name": "Company Services",
+            "description": "Company Services"
         },
         {
             "name": "Contact Us Mails",
